# EliteAssist

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  codegen.rs  generate_event_structs.ps1  generate_events.ps1  generate_material_locations.ps1  linux.Dockerfile  test_hardcoded_replacements.ps1  test_nested_struct_name.ps1  test_property_names.ps1  test_snake_case.ps1  windows.Dockerfile
.github/workflows/: pipeline.yml
codegen/: events.rs  fdev_ids.rs  inara.rs
codegen/events/: dedupe.rs  fixes.rs  json.rs  override.rs  overrides.rs  rust.rs  text.rs
src/: ardent.rs  color.rs  config.rs  control.rs  controls.rs  edsm.rs  elite_event.rs  event.rs  events.rs  fdev_ids.rs  files.rs  font.rs  fonts.rs  gui.rs  image.rs  images.rs  inara.rs  journal.rs  journal_poller.rs  journal_watcher.rs  lookup.rs  main.rs  material_detail.rs  material_details.rs  material_locations.rs  message.rs  query.rs  settings.rs  state.rs  subscription.rs  text.rs  theme.rs  util.rs  view_model.rs
src/ardent/: test.rs
src/control/: commander_details.rs  locker_item_list.rs  materials.rs  materials_list.rs  ship_locker.rs
src/controls/: commander_details.rs  inventory_list.rs  navigation_bar.rs  ship_locker.rs
src/edsm/: bodies.rs  deaths.rs  factions.rs  into.rs  server_status.rs  sphere_systems.rs  stations.rs  system.rs  test.rs  traffic.rs
src/event/: bank_account.rs  buy_micro_resources.rs  cargo.rs  chat.rs  cqc.rs  crafting.rs  crew.rs  disembark.rs  docked.rs  economy.rs  engineer_progress.rs  engineering.rs  exobiology.rs  exploration.rs  faction.rs  fighter.rs  format.rs  fuel_capacity.rs  inventory.rs  loadout.rs  location.rs  material_trader_stats.rs  materials.rs  mission.rs  module.rs  multicrew.rs  music.rs  navigation.rs  passengers.rs  personal.rs  rank.rs  session.rs  ship.rs  ship_locker.rs  ship_locker_item.rs  smuggling.rs  squadron_startup.rs  station_faction.rs  statistics.rs  suit_loadout.rs  (+3 more)
src/events/: backpack.rs  bank_account.rs  buy_ammo.rs  buy_micro_resources.rs  cargo.rs  combat.rs  commander.rs  cqc.rs  crafting.rs  crew.rs  crime.rs  disembark.rs  elite_event.rs  embark.rs  engineer.rs  engineer_progress.rs  engineering.rs  exobiology.rs  exploration.rs  faction.rs  faction_state.rs  file_header.rs  fuel_capacity.rs  load_game.rs  loadout.rs  location.rs  market.rs  material_trader_stats.rs  materials.rs  mining.rs  missions.rs  modifier.rs  module.rs  multicrew.rs  music.rs  npc_crew_paid_wage.rs  passengers.rs  powerplay.rs  progress.rs  rank.rs  (+19 more)
src/example_data/: cargo.json  commander.json  docking_timeout.json  hull_damage.json  leave_body.json  loadout.json  modules_info.json  music.json  new_commander.json  npc_crew_paid_wage.json  receive_text.json  (+2 more)
tests/: json_schemas_test.rs
(+544 files in other folders)
