[package]
name = "EliteAssist"
version = "0.5.0"
edition = "2024"
authors = ["Adam Drewery"]
license = "WTFPL2"
repository = "github.com/adam-drewery/EliteAssist"
description = "An assistive tool for Elite Dangerous that provides real-time game data monitoring and automation capabilities."
keywords = ["elite", "dangerous"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
iced = { version = "0.13.1", features = ["svg", "image", "tokio"] }
serde_json = "1.0.140"
tokio-stream = "0.1.17"
thousands = "0.2.0"
once_cell = "1.21.1"
colog = "1.3.0"
log = "0.4.27"
regex = "1.11.1"
chrono = "0.4.40"
csv = "1.3"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.15"
url = "2.5"
notify = { version = "8.2.0", default-features = true }
phf = { version = "0.13.1", features = ["macros"] }
scraper = "0.24.0"

[build-dependencies]
phf_codegen = "0.13.1"
csv = "1.3"
anyhow = "1.0.99"
phf = {version = "0.13.1", features = ["macros"]}
codegen = "0.2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"

[features]
mock_events = []

[dev-dependencies]
anyhow = "1.0.99"